@startuml diagram_klas_domena
title Investe — Diagram klas (model domenowy)

skinparam classAttributeIconSize 0
skinparam classFontSize 13
skinparam classHeaderBackgroundColor #1e3a5f
skinparam classHeaderFontColor #ffffff
skinparam classBorderColor #2e6da4
skinparam ArrowColor #2e6da4
skinparam BackgroundColor #f9f9f9
skinparam packageBackgroundColor #eaf2fb
skinparam packageBorderColor #2e6da4

package "Tożsamość" {
    class ApplicationUser {
        +Id : string
        +Email : string
        +UserName : string
        +PasswordHash : string
        +CreatedAt : DateTime
        --
        +Wallets : ICollection<Wallet>
        +PriceAlerts : ICollection<PriceAlert>
    }
}

package "Portfel" {
    class Wallet {
        +Id : int
        +Name : string
        +Description : string
        +CreatedAt : DateTime
        --
        +UserId : string
        +User : ApplicationUser
        +Holdings : ICollection<Holding>
        +Transactions : ICollection<Transaction>
    }

    class Holding {
        +Id : int
        +CoinId : string
        +CoinSymbol : string
        +CoinName : string
        +Quantity : decimal
        +AverageBuyPrice : decimal
        --
        +WalletId : int
        +Wallet : Wallet
    }
}

package "Transakcje" {
    class Transaction {
        +Id : int
        +CoinId : string
        +CoinSymbol : string
        +Type : TransactionType
        +Quantity : decimal
        +PriceAtTime : decimal
        +TotalValue : decimal
        +ExecutedAt : DateTime
        +Notes : string
        --
        +WalletId : int
        +Wallet : Wallet
    }

    enum TransactionType {
        Buy
        Sell
    }
}

package "Ceny" {
    class CoinPriceCache {
        +Id : int
        +CoinId : string
        +CoinSymbol : string
        +CoinName : string
        +CurrentPrice : decimal
        +PriceChange24h : decimal
        +PriceChangePercent24h : decimal
        +MarketCap : decimal
        +LastUpdated : DateTime
    }
}

package "Alerty" {
    class PriceAlert {
        +Id : int
        +CoinId : string
        +CoinSymbol : string
        +TargetPrice : decimal
        +Direction : AlertDirection
        +IsTriggered : bool
        +TriggeredAt : DateTime?
        +CreatedAt : DateTime
        --
        +UserId : string
        +User : ApplicationUser
    }

    enum AlertDirection {
        Above
        Below
    }
}

' Relacje
ApplicationUser "1" o-- "0..*" Wallet : posiada
ApplicationUser "1" o-- "0..*" PriceAlert : ustawia

Wallet "1" *-- "0..*" Holding : zawiera
Wallet "1" *-- "0..*" Transaction : rejestruje

Transaction --> TransactionType : typ
PriceAlert --> AlertDirection : kierunek

@enduml
